--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
         <input type="button" value="Search" id = "search-bar-btn">
     </div>
     <br>
+    <form class = "form-control">
+        <fieldset  class = "color-changer">
+          <input type="radio" id = "light" name = "theme" checked>
+          <input type="radio" id = "blue" name = "theme">
+          <input type="radio" id = "orange" name = "theme">
+          <input type="radio" id = "babyPink" name = "theme">
+          <input type="radio" id = "dark" name = "theme">
+        </fieldset>
+      </form>
+      <br>
     <div class="display-movies" id = "display-movies">
         
     </div>
