--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="header">
+        <h2 style="text-decoration: underline;" id = "heading">SEARCH YOUR MOVIES HERE</h2>
         <input type="search" name="search-bar" id="search-bar" placeholder="search here...">
         <input type="button" value="Search" id = "search-bar-btn">
     </div>
